feat: add some commands
